# juryrig

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: audit_demo.py
juryrig/: __init__.py  audits.py  calibration.py  dashboard.py  judge.py  panel.py  providers.py
tests/: test_audits.py  test_calibration.py  test_dashboard.py  test_judge.py  test_panel.py
