[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "juryrig"
version = "0.1.0"
description = "Audit your LLM judges: position bias, verbosity bias, consistency, panels, and calibration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ian Alloway", email = "ian@allowayllc.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "evals", "llm-as-judge", "calibration", "bias"]

[project.urls]
Homepage = "https://github.com/ianalloway/juryrig"
Issues = "https://github.com/ianalloway/juryrig/issues"

[tool.setuptools]
packages = ["juryrig"]
