[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "juryrig"
version = "0.1.0"
description = "Audit your LLM judges: position bias, verbosity bias, prompt injection, consistency, panels, and calibration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ian Alloway", email = "ian@allowayllc.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "evals", "llm-as-judge", "calibration", "bias", "prompt-injection"]

[project.urls]
Homepage = "https://github.com/ianalloway/juryrig"
Issues = "https://github.com/ianalloway/juryrig/issues"

[tool.setuptools]
packages = ["juryrig"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
